--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -1,5 +1,7 @@
 .shortpixel-bulk-wrapper
 {
+	@import 'elements/colors';
+
   /** GENERAL STYLES **/
     h1 {
       font-size: 23px;
@@ -31,41 +33,67 @@
     {
        font-size: 14px;
        //max-width: 650px;
-       margin-left: 10px;
-       margin: 15px 0;
+
+       margin: 15px 0 15px 15px;
     }
 
-    nav {
-			margin: auto;
-      margin-top: 45px;
-      width: 80%;
-			.button {
-				margin-right: 8px;
-				padding: 8px 16px;
-				background: #F5F5F5;
-				color: #1FBEC9;
-				letter-spacing: 0.3px;
-				font-weight: 700;
-				font-size: 14px;
-				.dashicons
-				{
-					 font-size: 26px;
-					 height: 26px;
-					 margin-right: 6px;
-					 padding-top: 2px;
-				}
+		.button {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			float: left;
+
+			margin-right: 8px;
+			padding: 8px 16px;
+			background: $color-brokenwhite;
+			color: $color-dark;
+			letter-spacing: 0.3px;
+			font-weight: 700;
+			font-size: 14px;
+			transition: 300ms all linear;
+			border: 1px solid $color-darkest;
+
+			&:hover {
+
+				background: $color-dark;
+				color: #fff;
+				border: 1px solid $color-dark;
+
 			}
-      .button-primary
-      {
-        margin-left: 15px;
-        background: #1FBEC9;
-        color: #fff;
-        border: 1px solid #1FBEC9;
-        border-radius: 3px;
-        box-shadow: 0px 1px 1px rgba(171, 170, 170, 0.3);
-      }
+			.dashicons
+			{
+				 font-size: 26px;
+				 height: 26px;
+				 margin-right: 8px;
+			}
 
+			p {
+				 margin: 0;
+				 display: inline;
+				 font-size: 14px;
+				 vertical-align: bottom;
+			}
+		}
+
+    .button-primary
+    {
+      background: $color-darkest;
+      color: #fff;
+      border: 1px solid $color-darkest;
+      border-radius: 3px;
+      box-shadow: 0px 1px 1px rgba(171, 170, 170, 0.3);
     }
+
+		nav {
+		  margin: 45px auto;
+	//		margin-top: 45px;
+			width: 80%;
+			min-height: 50px;
+			.button-primary
+			{
+					margin-left: 15px;
+			}
+	 	}
 
     .hidden {
       display: none !important;
@@ -207,10 +235,9 @@
         opacity: 0;
         transition: opacity 500ms ease-in;
         margin: 15px 0;
+
 				padding-bottom: 35px;
-        p {
-          margin-left: 15px;
-        }
+
 
         &.active
         {
@@ -353,24 +380,26 @@
             button
             {
                color: #ffffff;
-               background: linear-gradient(to left, #136970, #1FB5BF);
+               //background: linear-gradient(to left, $color-darkest, $color-dark);
                border-radius: 3px;
                width: 250px;
                height: 65px;
-               font-size: 13px;
-               line-height: 21px;
                transition: all 0.5s linear;
 							 font-weight: 700;
-							 font-size: 16px;
+						//	 font-size: 16px;
 							 letter-spacing: 0.3px;
 							 border: 1px solid #ccc;
 
                &:hover
                {
                 //  background: linear-gradient(to left, #3b9ea5, #50d9e2);
-									background:  #50d9e2;
-                  font-weight: 600;
+								background:  $color-darkest;
+								//	  background: linear-gradient(to left, $color-dark, $color-darkest);
+									height: 80px;
+									width: 300px;
+
                   transition: all 1s linear;
+
 								//	color: #000;
 				//	transition: all 0.5s linear;
                }
@@ -380,7 +409,8 @@
                }
                span
                {
-                  vertical-align: middle;
+								 margin-right: 16px;
+                 // vertical-align: middle;
                }
             }
        }
@@ -433,7 +463,7 @@
         {
           display: flex;
           flex-direction: row;
-          width: 80%;
+          width: 90%;
           justify-content: space-around;
 
           >div
@@ -467,11 +497,11 @@
           {
             border: 2px solid #ccc;
             border-radius: 50%;
-            height: 40px;
+            height: 45px;
             font-size: 28px;
             font-weight: 700;
             color: #ccc;
-            width: 40px;
+            width: 45px;
             line-height: 35px;
             text-align: center;
             box-sizing: border-box;
@@ -479,6 +509,7 @@
             z-index: 2;
             background: #fff;
             transition: color 1s ease-in;
+						padding-top: 2px;
           }
           .text
           {
@@ -486,6 +517,8 @@
             font-weight: 700;
             text-transform: uppercase;
             color: #ccc;
+						margin-top: 8px;
+
           }
         }
 
@@ -585,7 +618,7 @@
 
 				 &.selection-settings
 				 {
-				 			.option, label { font-size: 13px; }
+				 		//	.option, label { font-size: 13px; }
 				 }
 			}
 
@@ -603,7 +636,7 @@
          }
          .option {
            margin-left: 85px;
-           font-size: 16px;
+          // font-size: 16px;
            line-height: 26px;
            label {
                width: 200px;
@@ -692,8 +725,8 @@
                     display: table-cell;
                     border: 1px solid #DFEAFF;
                     width: 50%;
-                    text-align: center;
-                    padding: 15px 0;
+                   // text-align: center;
+                    padding: 15px 0 15px 15px;
 
 
                  }
@@ -712,15 +745,20 @@
 
       .credits {
           display: table;
-          margin: 35px 0 35px 25px;
-          width: 50%;
-					margin-left: 10%;
+          //margin: 35px 0 35px 25px;
+          width: 80%;
+					//margin-left: 10%;
+					margin: 35px auto;
           > p { display: table-row }
           > p > span {
              display: table-cell;
              padding: 10px 0;
              font-size: 14px;
-             &:first-child { font-weight: 700; }
+						 vertical-align: middle;
+             &:first-child { font-weight: 700; width: 40%; }
+						 &:nth-child(2n) { width: 30%; }
+						 &:nth-child(3n) { text-align: right; }
+						 .button { float: right; margin-right: 0; }
           }
 
           .heading span {
@@ -732,7 +770,7 @@
       .over-quota, .no-images,
       {
          border: 1px solid #ff0000;
-         padding: 8px;
+         padding: 16px;
          width: 80%;
          margin: 30px auto;
          display: flex;
