Custom id in UI Fixes for PDF successtext / floats

--- a/res/css/shortpixel-othermedia.css
+++ b/res/css/shortpixel-othermedia.css
@@ -72,7 +72,7 @@
 }
 .shortpixel-other-media .list-overview .item:hover .row-actions {
   left: 0;
-  color: #ddd;
+  color: #bbb;
 }
 .shortpixel-other-media .list-overview .item:hover .row-actions a {
   text-decoration: none;
