--- a/res/scss/shortpixel-othermedia.scss
+++ b/res/scss/shortpixel-othermedia.scss
@@ -101,7 +101,7 @@
            .row-actions
            {
              left: 0;
-             color: #ddd;
+             color: #bbb;
              a
              {
             //   margin-right: 4px;
