--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -818,6 +818,7 @@
   transition: 1s all linear;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-shrink: 0;
   flex-grow: 0;
   width: 100%;
@@ -830,7 +831,7 @@
 }
 .shortpixel-bulk-wrapper section.panel.process .image-preview-section .preview-wrapper .image, .shortpixel-bulk-wrapper section.panel.finished .image-preview-section .preview-wrapper .image {
   max-width: 45%;
-  max-height: 400px;
+  max-height: 600px;
   overflow: hidden;
   position: relative;
 }
