--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -978,6 +978,7 @@
 						 transition: 1s all linear;
  						 display: flex;
 						 justify-content: center;
+						 align-items: center; 
 						 flex-shrink: 0;
 						 flex-grow: 0;
 						 width: 100%;
@@ -1003,7 +1004,7 @@
            .image
            {
               max-width: 45%;
-              max-height: 400px;
+              max-height: 600px;
             //  border: 1px solid #DFEAFF;
               overflow: hidden;
               position: relative;
