--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -820,26 +820,38 @@
       .average-optimization
       {
         position: absolute;
-        top: 0;
-        right: 35px;
+        top: 0px;
+        right: 0;
         display: flex;
         justify-content: center;
-        margin-top: -10px;
+				z-index: 2;
+				background: rgba(255,255,255,0.4);
+       // margin-top: -10px;
         p {
-          margin-top: 25px;
-          margin-right: 15px;
-          font-size: 14px;
+          margin: 0;
+          font-size: 13px;
+					position: absolute;
+				//	width: 100%;
+
+					bottom: 45px;
+					left: 0;
+					padding: 6px 10px;
+					color: #fff;
+					background: rgba($color-darkest, 0.5);
+					font-weight: 700;
+					border-radius: 3px;
+
         }
         .opt-circle-average {
-            width: 90px;
-            height: 90px;
+            width: 150px;
+            height: 150px;
             float: right;
-            margin-right: 35px;
+           // margin-right: 35px;
             .trail {
               stroke: #ddd;
             }
             .path {
-              stroke: #1FBEC9;
+              stroke: $color-dark;
               stroke-linecap: round;
               transition: stroke-dashoffset 0.5s ease 0s;
             }
@@ -978,7 +990,7 @@
 						 transition: 1s all linear;
  						 display: flex;
 						 justify-content: center;
-						 align-items: center; 
+						 align-items: center;
 						 flex-shrink: 0;
 						 flex-grow: 0;
 						 width: 100%;
