A81 - Fix for log load in finished - Fix for filename in log - Fix for tools page - Fix for out of credits / S3 offload / PDF - other fixes

--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -751,6 +751,7 @@
   position: relative;
   background: #ccc;
   display: inline-block;
+  vertical-align: middle;
 }
 .shortpixel-bulk-wrapper section.panel.process .bulk-summary .line-progressbar .done-text, .shortpixel-bulk-wrapper section.panel.finished .bulk-summary .line-progressbar .done-text {
   position: absolute;
@@ -822,7 +823,7 @@
   justify-content: flex-start;
 }
 .shortpixel-bulk-wrapper section.panel.process .image-preview-section .preview-wrapper .preview-image, .shortpixel-bulk-wrapper section.panel.finished .image-preview-section .preview-wrapper .preview-image {
-  transition: 1s all linear;
+  transition: 0.5s all linear;
   display: flex;
   justify-content: center;
   align-items: center;
