--- a/res/scss/view/_settings-tools.scss
+++ b/res/scss/view/_settings-tools.scss
@@ -4,21 +4,74 @@
 
 	.option
 	{
-		 width: 80%;
+	//	 width: 80%;
 	//	 max-width: 500px;
 
 		 padding: 8px;
-		 margin: 25px 0;
+	//	 margin: 25px 0;
+		 display: inline-block;
 		 .button
 		 {
-			  margin: 10px 8px;
+			//  margin: 10px 8px;
 			//	padding: 12px;
+		 }
+		 p {
+			 margin: 14px 0;
+			// font-size: 14px;
+		//	 max-width: 50%;
 		 }
 	}
 
+	.option{
+			clear: both;
+			display: flex;
+			margin: 25px 0;
+			div.name {
+					width: 220px;
+					font-weight: 700;
+					display: inline-block;
+					flex : 0 0 auto;
+
+			}
+			div.field {
+				 display: inline-block;
+				 vertical-align: middle;
+	//			 margin-left: 220px;
+			//	 flex: 0 0 auto;
+					.button {
+							min-width: 200px;
+							font-weight: 700;
+							text-align: center;
+							padding: 6px 8px;
+							&.danger
+							{
+								 color: #fff;
+								 background: #ff0000;
+								 border: 1px solid #ff0000;
+							}
+					}
+
+			}
+			//p.description { margin: 8px 0; }
+	}
+
+
+				.option-row
+				{
+					margin: 15px 0;
+					display: block;
+				}
+
 	.danger-zone
 	{
-		 border: 1px solid #ff0000;
+		h3 {
+			margin-left: 15px;
+			text-transform: uppercase;
+			font-weight: 700;
+		}
+		> p { margin-left: 15px; }
+	//	 padding: 8px;
+	//	 border: 1px solid #ff0000;
 	}
 
 
