--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -3,16 +3,107 @@
 .settings_page_wp-shortpixel-settings
 {
 	@import '../elements/colors';
+	@import '../elements/breakpoints';
 
   .top-menu
   {
     font-size: 18px;
-    a { font-size: 18px; }
+		display: flex;
+		width: 100%;
+		min-height: 50px;
+		align-items: center;
+
+		.links
+		{
+	    a { font-size: 18px; margin-right: 8px; }
+			flex: 12 4 auto;
+//		flex-grow: 14;
+
+		}
 		.quota-remaining
 		{
-			 float: right;
+			 //float: right;
+			 flex: 2 1 2;
+			 text-align: center;
 		}
-  }
+		.pie-wrapper
+		{
+			position: relative;
+			flex: 4 2 auto;
+			min-width: 150px;
+//			flex-grow: 2;
+			@include breakpoint(0, 1500px)
+			{
+				min-width: 100px;
+
+			}
+		}
+		div.sp-bulk-summary {
+				position: absolute;
+				top: -45px;
+			//	min-width: 150px;
+			//	top: 50px;
+			//	right: 50px;
+			//	margin:8px 5px 3px 20px;
+				//right: 0;
+				//top: 0;
+				z-index: 10;
+			//	width: 150px;
+			//	height: 150px;
+
+
+				.opt-circle-average {
+						width: 150px;
+						height: 150px;
+						float: right;
+					 // margin-right: 35px;
+						.trail {
+							stroke: #ddd;
+						}
+						.path {
+							stroke: $color-dark;
+							stroke-linecap: round;
+							transition: stroke-dashoffset 0.5s ease 0s;
+						}
+						.text {
+
+							fill: #1FBEC9;
+							font-size: 28px;
+							font-weight: 700;
+							dominant-baseline: middle;
+							text-anchor: middle;
+						}
+
+				}
+				span {
+					margin: 0;
+					font-size: 11px;
+					position: absolute;
+				//	width: 100%;
+
+					bottom: 45px;
+					//left: -15px;
+					padding: 4px 8px;
+					color: #fff;
+					background: rgba($color-darkest, 0.5);
+					font-weight: 700;
+					border-radius: 3px;
+					white-space: nowrap;
+				}
+				@include breakpoint(0,1500px)
+				{
+
+					.opt-circle-average {
+							width: 100px;
+							height: 100px;
+					}
+					span
+					{
+						display: none;
+					}
+				}
+		} // optimized thing
+  } // top menu
 
   .wp-shortpixel-tab-content
   {
@@ -22,63 +113,20 @@
      color: #ff0000;
   }
 
-	div.sp-bulk-summary {
-	    position: absolute;
-			top: 50px;
-			right: 50px;
-	    margin:8px 5px 3px 20px;
- 		 	//right: 0;
- 		 	//top: 0;
- 		 	z-index: 10;
-		//	width: 150px;
-		//	height: 150px;
-
-			.opt-circle-average {
-					width: 150px;
-					height: 150px;
-					float: right;
-				 // margin-right: 35px;
-					.trail {
-						stroke: #ddd;
-					}
-					.path {
-						stroke: $color-dark;
-						stroke-linecap: round;
-						transition: stroke-dashoffset 0.5s ease 0s;
-					}
-					.text {
-
-						fill: #1FBEC9;
-						font-size: 28px;
-						font-weight: 700;
-						dominant-baseline: middle;
-						text-anchor: middle;
-					}
-			}
-			span {
-				margin: 0;
-				font-size: 13px;
-				position: absolute;
-			//	width: 100%;
-
-				bottom: 45px;
-				left: -15px;
-				padding: 6px 10px;
-				color: #fff;
-				background: rgba($color-darkest, 0.5);
-				font-weight: 700;
-				border-radius: 3px;
-				white-space: nowrap;
-			}
-	}
-
-
-
   //tabs
   article.sp-tabs
   {
     section // inside the tab
     {
+			p.settings-info {
+			    padding-top: 0px;
+			    color: #818181;
+			    font-size:13px !important;
+			}
+			p.settings-info.shortpixel-settings-error {
+			    color: #c32525;
+			}
+			
       .wp-shortpixel-tab-content
       { opacity: 0; }
       &.sel-tab .wp-shortpixel-tab-content
@@ -86,11 +134,12 @@
         opacity: 1;
       }
 
+
 			.option-content
 			{
 				 display: inline-block;
 			}
-			.suboption // if you are child of main option, indent left. 
+			.suboption // if you are child of main option, indent left.
 			{
 				margin-left: 8px;
 			}
