--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -875,7 +875,7 @@
         > div > span {
             display: table-cell;
             padding: 16px;
-						width: 25%;
+						width: 33%;
         }
         .heading {
            background: #F6F9FF;
@@ -1020,22 +1020,14 @@
            {
               max-width: 45%;
               max-height: 600px;
-            //  border: 1px solid #DFEAFF;
               overflow: hidden;
               position: relative;
 
               img {
-              //  max-width: 100%;
-              //  max-height: 100%;
                 width: 100%;
 								height: auto;
 								object-fit: cover;
-              //  transition: opacity 1s eas
-                &[src=""]
-                {
-                  // height: 350px;
-                //   width: 350px;
-                }
+
 								&[src*="placeholder.svg"]
 								{
 									z-index: 1;
@@ -1145,7 +1137,39 @@
 			 	}
 				.warning { color: #ff0000;  }
 
-
+				.optiongroup
+	      {
+					clear: both;
+					margin-left: 130px;
+	         //margin-left: 15px;
+	         .switch_button {
+	            display: inline-block;
+	         }
+	         h4 {
+	            font-size: 14px;
+	            font-weight: 400;
+	            display: inline-block;
+	            margin-left: 25px;
+							color: #000;
+	         }
+	         .option {
+	           margin-left: 85px;
+	          // font-size: 16px;
+	           line-height: 26px;
+	           label {
+	               width: 200px;
+	               display: inline-block;
+	           }
+	           .number {
+	               font-weight: 700;
+	           }
+	        }
+					&.warning
+					{
+						 font-weight: 700;
+						 color: #ff0000;
+					}
+	      }
 
 		}
 
