- Fix restore issue with showing resizing - Fix restore issue with showing filesize - Fix issue with double thumb sizes and database drops - Fix CSS in stat / tools - Fix issue with pn2jpg and polylang -

--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -9,6 +9,9 @@
 		color: $color-darkest;
 
 	}
+	p {
+		font-size: 14px;
+	}
 	.button
 	{
 		color: $color-darkest;
@@ -147,7 +150,7 @@
 			p.settings-info {
 			    padding-top: 0px;
 			    color: #818181;
-			    font-size:13px !important;
+			    font-size:13px !important; 
 			}
 			p.settings-info.shortpixel-settings-error {
 			    color: #c32525;
