--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -4,6 +4,9 @@
 .settings_page_wp-shortpixel-settings a {
   color: #0f6a7d;
 }
+.settings_page_wp-shortpixel-settings p {
+  font-size: 14px;
+}
 .settings_page_wp-shortpixel-settings .button {
   color: #0f6a7d;
 }
