--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -52,6 +52,7 @@
 			font-size: 14px;
 			transition: 300ms all linear;
 			border: 1px solid $color-darkest;
+			min-height: 44px;
 
 			&:hover {
 
@@ -1033,7 +1034,7 @@
 								}
 								&[src*="placeholder.svg"]:not(.notempty)
 								{
-									z-index: 1;									
+									z-index: 1;
 								}
 								z-index: 10;
 								position: relative;
