Fix for restoreAll Fix for event launching on buttons Fix for restore when out of quota UX fixes when out of quota Fix for legacy calculate without backup and opt is error Fix for buttons

--- a/res/css/shortpixel-notices.css
+++ b/res/css/shortpixel-notices.css
@@ -75,7 +75,7 @@
 .shortpixel.shortpixel-notice .sp-conflict-plugins li > * {
   display: table-cell;
 }
-.shortpixel.shortpixel-notice .content button, .shortpixel.shortpixel-notice .content .button-primary {
+.shortpixel.shortpixel-notice .content .button-primary {
   background-color: #0f6a7d;
 }
 .shortpixel.shortpixel-notice li.sp-conflict-plugins-list {
