--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -7,14 +7,16 @@
 .settings_page_wp-shortpixel-settings p {
   font-size: 14px;
 }
-.settings_page_wp-shortpixel-settings .button {
+.settings_page_wp-shortpixel-settings .button, .settings_page_wp-shortpixel-settings button:focus {
   color: #0f6a7d;
+  min-height: 44px;
 }
-.settings_page_wp-shortpixel-settings .button-primary {
+.settings_page_wp-shortpixel-settings .button-primary, .settings_page_wp-shortpixel-settings .button-primary:focus {
   background-color: #0f6a7d;
   color: #fff;
+  min-height: 44px;
 }
-.settings_page_wp-shortpixel-settings .button-primary:hover {
+.settings_page_wp-shortpixel-settings .button-primary:hover, .settings_page_wp-shortpixel-settings .button-primary:focus:hover {
   background-color: #1cbecb;
 }
 .settings_page_wp-shortpixel-settings .top-menu {
