--- a/res/scss/shortpixel-notices.scss
+++ b/res/scss/shortpixel-notices.scss
@@ -104,7 +104,7 @@
 
   }
 
-  .content button, .content .button-primary
+  .content .button-primary
   { // gets overwritten in NGG.
     background-color: $color-darkest;
   }
