--- a/res/scss/view/_settings-cloudflare.scss
+++ b/res/scss/view/_settings-cloudflare.scss
@@ -18,7 +18,7 @@
     //  font-size: 18px;
       padding:8px 0px 8px 15px;
       display:block;
-      font-size: 13px;
+      //font-size: 13px;
 
     }
     input {
