--- a/res/scss/view/_settings-tools.scss
+++ b/res/scss/view/_settings-tools.scss
@@ -12,7 +12,7 @@
 					font-weight: 700;
 					display: inline-block;
 					flex : 0 0 auto;
-
+					font-size: 14px;
 			}
 			div.field {
 				 display: inline-block;
