--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -924,7 +924,10 @@
 					}
 
         }
-      }
+				.display-error-box {
+					float: right;
+				}
+      } // summary
 
       .image-preview-section {
          background: #F6F9FF;
